@@ -1,13 +1,30 @@
-java -Xmx640m -cp .;.\bin^
-;lib\org.eclipse.ui.workbench_3.7.1.v20120104-1859.jar^
-;lib\org.eclipse.ui.workbench.texteditor_3.7.0.v20110928-1504.jar^
-;lib\org.eclipse.jface.text_3.7.2.v20111213-1208.jar^
-;lib\org.eclipse.osgi_3.7.2.v20120110-1415.jar^
-;lib\org.eclipse.jface_3.7.0.v20110928-1505.jar^
-;lib\jacob-1.14.3.jar^
-;lib\dom4j-1.6.1.jar^
-;lib\stax-api-1.0.1.jar^
-;lib\xmlbeans-2.6.0.jar^
-;lib\kodkod.jar^
-;lib\org.eclipse.draw2d_3.5.0.jar^
+SETLOCAL EnableDelayedExpansion
+for /f "tokens=3" %%g in ('java -version 2^>^&1 ^| findstr /i "version"') do @set v=%%g
+@set version=!v:"=! 
+@set oldsyn=!version:~1,1!
+echo %version%
+echo %oldsyn%
+if %%oldsyn%% EQU "." ( 
+@echo StartUp for Java 8 and older.
+java ^
+-Xmx640m ^
+-cp .;.\bin^
+;lib\*^
+;lib\richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ini-win.txt 
+) else ( if %version:~0,2% LEQ 8 (
+@echo StartUp for Java 8 and older.
+java ^
+-Xmx640m ^
+-cp .;.\bin^
+;lib\*^
+;lib\richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ini-win.txt 
+) else (
+@echo StartUp for Java 9 and newer
+java ^
+-p .\javafx\lib ^
+--add-modules=ALL-MODULE-PATH ^
+-Xmx640m ^
+-cp .;.\bin^
+;lib\*^
 ;lib\richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ini-win.txt
+) )
