@@ -1,15 +1,25 @@
-java -Xmx640m \
+JAVA_VER=$(java -version 2>&1 | sed -n ';s/.* version "\(.*\)\.\(.*\)\..*".*/\1\2/p;')
+if [ $JAVA_VER -le 18 ]
+then
+
+echo "StartUp for Java 8 and older.."
+java \
+-Xmx640m \
 -Xdock:icon=Xmodeler.app/Contents/Resources/mosaic-no-bg.icns \
 -cp .:./bin\
-:lib/org.eclipse.ui.workbench_3.7.1.v20120104-1859.jar\
-:lib/org.eclipse.ui.workbench.texteditor_3.7.0.v20110928-1504.jar\
-:lib/org.eclipse.jface.text_3.7.2.v20111213-1208.jar\
-:lib/org.eclipse.osgi_3.7.2.v20120110-1415.jar\
-:lib/org.eclipse.jface_3.7.0.v20110928-1505.jar\
-:lib/jacob-1.14.3.jar\
-:lib/dom4j-1.6.1.jar\
-:lib/stax-api-1.0.1.jar\
-:lib/xmlbeans-2.6.0.jar\
-:lib/kodkod.jar\
-:lib/org.eclipse.draw2d_3.5.0.jar\
+:lib/*\
 :lib/richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ./ini-linux.txt
+
+else
+
+echo "StartUp for Java 9 and newer.."
+java \
+-Xmx640m \
+-Xdock:icon=Xmodeler.app/Contents/Resources/mosaic-no-bg.icns \
+--module-path ./m_javafx/lib/ \
+--add-modules=ALL-MODULE-PATH \
+-cp .:./bin\
+:lib/*\
+:lib/richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ./ini-linux.txt
+
+fi
